--- a/build.gradle
+++ b/build.gradle
@@ -13,17 +13,48 @@ group = project.maven_group
 minecraft {
 }
 
+repositories {
+	mavenCentral()
+	mavenLocal()
+	maven{ url="https://minecraft.curseforge.com/api/maven" }
+	maven{ url="http://maven.modmuss50.me" }
+	maven{ url="https://maven.fabricmc.net" }
+	maven{ url="https://jitpack.io" }
+	maven{ url="http://maven.sargunv.s3-website-us-west-2.amazonaws.com/" }
+	//maven{ url="http://server.bbkr.space:8081/artifactory/libs-snapshot/" } //shouldn't need snapshot repo any more
+	maven{ url="http://server.bbkr.space:8081/artifactory/libs-release/" }
+	maven{ url="https://maven.swordglowsblue.com/" }
+	maven{ url="https://maven.jamieswhiteshirt.com/libs-release/" }
+}
+
 dependencies {
-	//to change the versions see the gradle.properties file
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
 	mappings "net.fabricmc:yarn:${project.yarn_mappings}"
 	modCompile "net.fabricmc:fabric-loader:${project.loader_version}"
 
 	// Fabric API. This is technically optional, but you probably want it anyway.
-	modCompile "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
+	modApi("net.fabricmc.fabric-api:fabric-api:${project.fabric_version}") {
+		force = true
+	}
 
-	// PSA: Some older mods, compiled on Loom 0.2.1, might have outdated Maven POMs.
-	// You may need to force-disable transitiveness on them.
+	modApi "me.sargunvohra.mcmods:auto-config:${project.auto_config_version}"
+	modImplementation("me.shedaniel.cloth:config-2:${project.cloth_config_version}") {
+		force = true
+	}
+
+	modApi "vampirelib:VampireLib:${project.vampirelib_version}"
+
+	// For dev env testing
+	modImplementation "com.jamieswhiteshirt:developer-mode:${project.developer_mode_version}"
+	modImplementation("me.shedaniel:RoughlyEnoughItems:${project.rei_version}") {
+		exclude(module: "ModMenu")
+	}
+	modImplementation "io.github.prospector:modmenu:${project.modmenu_version}"
+	modImplementation "leaf-decay:leaf:decay:${project.leaf_decay_version}"
+	modImplementation "worldedit:worldedit-fabric-mc1.14.4:${project.we_version}"
+	modImplementation "artificemc:artifice:${project.artifice_version}"
+
+	compile "com.google.code.findbugs:jsr305:3.0.2"
 }
 
 processResources {
@@ -39,16 +70,10 @@ processResources {
 	}
 }
 
-// ensure that the encoding is set to UTF-8, no matter what the system default is
-// this fixes some edge cases with special characters not displaying correctly
-// see http://yodaconditions.net/blog/fix-for-java-file-encoding-problems-with-gradle.html
 tasks.withType(JavaCompile) {
 	options.encoding = "UTF-8"
 }
 
-// Loom will automatically attach sourcesJar to a RemapSourcesJar task and to the "build" task
-// if it is present.
-// If you remove this task, sources will not be generated.
 task sourcesJar(type: Jar, dependsOn: classes) {
 	classifier = "sources"
 	from sourceSets.main.allSource
@@ -58,11 +83,9 @@ jar {
 	from "LICENSE"
 }
 
-// configure the maven publication
 publishing {
 	publications {
 		mavenJava(MavenPublication) {
-			// add all the jars that should be included when publishing to maven
 			artifact(remapJar) {
 				builtBy remapJar
 			}
@@ -72,9 +95,7 @@ publishing {
 		}
 	}
 
-	// select the repositories you want to publish to
 	repositories {
-		// uncomment to publish to the local maven
-		// mavenLocal()
+		mavenLocal()
 	}
 }
