--- a/gradle.properties
+++ b/gradle.properties
@@ -1,17 +1,22 @@
-# Done to increase the memory available to gradle.
 org.gradle.jvmargs=-Xmx1G
 
-# Fabric Properties
-	# check these on https://fabricmc.net/use
-	minecraft_version=1.14.4
-	yarn_mappings=1.14.4+build.5
-	loader_version=0.4.8+build.159
+minecraft_version=1.14.4
+yarn_mappings=1.14.4+build.9
+loader_version=0.4.8+build.159
 
-# Mod Properties
-	mod_version = 1.0.0
-	maven_group = net.fabricmc
-	archives_base_name = fabric-example-mod
+fabric_version=0.3.1+build.208
 
-# Dependencies
-	# currently not on the main fabric site, check on the maven: https://maven.fabricmc.net/net/fabricmc/fabric-api/fabric-api
-	fabric_version=0.3.0+build.207
+auto_config_version = +
+tweed_api_version = 2.2.4
+cloth_config_version = 1.0.0
+vampirelib_version = 1.0.2+1.14.4
+developer_mode_version = +
+rei_version = 3.0-pre+build.1
+modmenu_version = +
+leaf_decay_version = 1.0.3
+we_version = 7.0.1:rc1
+artifice_version = 0.3.4
+
+mod_version = 0.1.0
+maven_group = io.github.vampirestudios
+archives_base_name = VehiclesAndTheKitchenSink
