--- a/gradle.properties
+++ b/gradle.properties
@@ -1,18 +1,18 @@
 org.gradle.jvmargs=-Xmx1G
 
-minecraft_version=1.14.4
-yarn_mappings=1.14.4+build.9
-loader_version=0.4.8+build.159
+minecraft_version=19w35a
+yarn_mappings=19w35a+build.3
+loader_version=0.6.1+build.165
 
-fabric_version=0.3.1+build.208
+fabric_version=0.3.2+build.218-1.14
 
 auto_config_version = +
 tweed_api_version = 2.2.4
-cloth_config_version = 1.0.0
-vampirelib_version = 1.0.2+1.14.4
+cloth_config_version = 1.1.1
+vampirelib_version = 1.0.4+19w35a:build.2
 developer_mode_version = +
-rei_version = 3.0-pre+build.1
-modmenu_version = +
+rei_version = 3.1-pre+build.4
+modmenu_version = 1.7.10-unstable.19w35a+build.2
 leaf_decay_version = 1.0.3
 we_version = 7.0.1:rc1
 artifice_version = 0.3.4
