--- a/build.gradle
+++ b/build.gradle
@@ -1,6 +1,7 @@
 plugins {
-	id 'fabric-loom' version '0.2.5-SNAPSHOT'
+	id 'fabric-loom' version '0.2.6-SNAPSHOT'
 	id 'maven-publish'
+	id "com.wynprice.cursemaven" version "2.1.0"
 }
 
 sourceCompatibility = JavaVersion.VERSION_1_8
@@ -29,33 +30,26 @@ repositories {
 
 dependencies {
 	minecraft "com.mojang:minecraft:${project.minecraft_version}"
-	mappings "net.fabricmc:yarn:${project.yarn_mappings}"
+	mappings "net.fabricmc:yarn:${project.yarn_mappings}:v2"
+
 	modCompile "net.fabricmc:fabric-loader:${project.loader_version}"
+	modCompile "net.fabricmc.fabric-api:fabric-api:${project.fabric_version}"
 
-	// Fabric API. This is technically optional, but you probably want it anyway.
-	modApi("net.fabricmc.fabric-api:fabric-api:${project.fabric_version}") {
-		force = true
-		exclude(group: "net.fabricmc.fabric-api", module: "fabric-renderer-indigo")
+	modCompile "me.sargunvohra.mcmods:autoconfig1u:${project.auto_config_version}"
+	include ("me.sargunvohra.mcmods:autoconfig1u:${project.auto_config_version}") {
+		exclude group :"net.fabricmc.fabric-api"
 	}
 
-	modApi "me.sargunvohra.mcmods:auto-config:${project.auto_config_version}"
-	modImplementation("me.shedaniel.cloth:config-2:${project.cloth_config_version}") {
-		force = true
+	modImplementation "curse.maven:vampirelib:${project.vampirelib_version}"
+	include ("curse.maven:vampirelib:${project.vampirelib_version}") {
+		exclude group :"net.fabricmc.fabric-api"
 	}
-
-	modApi "vampirelib:VampireLib:${project.vampirelib_version}"
 
 	// For dev env testing
 	modImplementation("me.shedaniel:RoughlyEnoughItems:${project.rei_version}") {
-		exclude(group: "io.github.prospector.modmenu", module: "ModMenu")
-		exclude(group: "net.fabricmc.fabric-api", module: "fabric-renderer-indigo")
+		exclude group: "io.github.prospector.modmenu"
+		exclude group :"net.fabricmc.fabric-api"
 	}
-	modImplementation ("io.github.prospector:modmenu:${project.modmenu_version}") {
-		exclude(group: "net.fabricmc.fabric-api", module: "fabric-renderer-indigo")
-	}
-	//modImplementation "leaf-decay:leaf:decay:${project.leaf_decay_version}"
-	modImplementation "worldedit:worldedit-fabric-mc1.14.4:${project.we_version}"
-	modImplementation "artificemc:artifice:${project.artifice_version}"
 
 	compile "com.google.code.findbugs:jsr305:3.0.2"
 }
