--- a/gradle.properties
+++ b/gradle.properties
@@ -1,21 +1,16 @@
 org.gradle.jvmargs=-Xmx1G
 
-minecraft_version=19w35a
-yarn_mappings=19w35a+build.3
-loader_version=0.6.1+build.165
+# Minecraft
+minecraft_version=1.15.1
 
-fabric_version=0.3.2+build.218-1.14
+# Fabric
+yarn_mappings=1.15.1+build.6
+loader_version=0.7.2+build.175
+fabric_version=0.4.25+build.282-1.15
 
-auto_config_version = +
-tweed_api_version = 2.2.4
-cloth_config_version = 1.1.1
-vampirelib_version = 1.0.4+19w35a:build.2
-developer_mode_version = +
-rei_version = 3.1-pre+build.4
-modmenu_version = 1.7.10-unstable.19w35a+build.2
-leaf_decay_version = 1.0.3
-we_version = 7.0.1:rc1
-artifice_version = 0.3.4
+auto_config_version = 1.2.3
+vampirelib_version = 2833255
+rei_version = 3.2.18
 
 mod_version = 0.1.0
 maven_group = io.github.vampirestudios
