--- a/settings.gradle
+++ b/settings.gradle
@@ -5,6 +5,9 @@ pluginManagement {
             name = 'Fabric'
             url = 'https://maven.fabricmc.net/'
         }
+        maven {
+            url "https://plugins.gradle.org/m2/"
+        }
         gradlePluginPortal()
     }
 }
